test/errors/delete_used_variable.li
let x = 42;
println(x);
delete x;

# This should cause an error
println(x);
